# Wheels

./: .clang-format  .gitignore  LICENSE  README.md
Eventgen_femto_3d/: AGENTS.md  CMakeLists.txt  Prompt_template.md  res.root  run_eventgen_femto_3d.sh
Eventgen_femto_3d/Code_structure/: 3d_single_pair_dist.md  Create_TH3D.md  Fill_to_TH3D.md  General_purpose.md
Eventgen_femto_3d/config/: blastwave_flat_trees.toml  bw_7phibin_test.toml
Eventgen_femto_3d/config/examples/: blastwave_flat_trees.example.toml  legacy_vector_tree.example.toml
Eventgen_femto_3d/include/femto3d/: AnalysisConfig.h  AnalysisTypes.h  Config.h  EventPlane.h  Histogramming.h  InputReader.h  ProjectionFit.h  SourceExtraction.h  Workflow.h
Eventgen_femto_3d/project-state/: changelog.md  current-status.md  guide.md  handoff.md  tests.md  work-items.md
Eventgen_femto_3d/src/: Config.cpp  EventPlane.cpp  Histogramming.cpp  InputReader.cpp  ProjectionFit.cpp  Source_extraction.cpp  Workflow.cpp  main.cpp
Eventgen_femto_3d/tests/: AlphaHbtErrorSemanticsTest.cpp  ConfigParseValidationTest.cpp  DirectionalCovarianceFailureSemanticsTest.cpp  FitSummaryDirectionalErrorMaskTest.cpp  InputAdapterTest.cpp  LegacyWorkflowSmokeTest.cpp  R2SummaryPolicyTest.cpp  R2SummaryVisibilityTest.cpp  RootRuntimeProbe.cpp  run_root_guard.sh
Exp_femto_1d/: CMakeLists.txt  PLAN.md  README.md  ROOT_RUNTIME_AGENT_NOTE.md  get_cf_from_exp.cpp
Exp_femto_1d/app/: main.cpp
Exp_femto_1d/config/: pbpb_build_and_fit.toml
Exp_femto_1d/config/examples/: exp_femto_1d.example.toml  minimal.toml
Exp_femto_1d/include/exp_femto_1d/: CatsModel.h  Config.h  Logging.h  Types.h  Workflow.h
Exp_femto_1d/legacy/: README.md
Exp_femto_1d/project-state/: changelog.md  current-status.md  decisions.md  guide.md  handoff.md  issues.md  tests.md  work-items.md
Exp_femto_1d/src/: CatsModel.cpp  Config.cpp  Logging.cpp  Workflow.cpp
Exp_femto_1d/tests/: CatsFitSmokeTest.cpp  ConfigParseValidationTest.cpp  RootRuntimeProbe.cpp  SliceCatalogRoundTripTest.cpp  WorkflowSmokeTest.cpp
Exp_femto_3d/: README.md  ROOT_RUNTIME_AGENT_NOTE.md
Exp_femto_3d/app/: main.cpp
Exp_femto_3d/config/: oo_build_and_fit.toml  pbpb_build_and_fit.toml  run_cmd
Exp_femto_3d/config/examples/: exp_femto_3d.example.toml  minimal.toml
Exp_femto_3d/include/exp_femto_3d/: Config.h  Logging.h  Types.h  Workflow.h
Exp_femto_3d/legacy/: 3d_cf_from_exp.cpp  README.md
Exp_femto_3d/project-state/: changelog.md  current-status.md  decisions.md  guide.md  handoff.md  issues.md  tests.md  work-items.md
Exp_femto_3d/src/: Config.cpp  Logging.cpp  Workflow.cpp
Exp_femto_3d/tests/: ConfigParseValidationTest.cpp  RootRuntimeProbe.cpp  SliceCatalogRoundTripTest.cpp  WorkflowSmokeTest.cpp
Exp_femto_3d/wenya_ref/: Bowler3DFit_polbaseline_default.C  deal_online_data.C  fit3D_polbaseline_default.C
